--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,10 @@
 			
 			<ul class="users-list">
 			</ul>
+			<div class="options">
+				<input type="text" placeholder="delay" id="animation-input" max="5000" maxlength="4"/>
+				<a href="#" id="toggle-lights" data-lights="on">dim lights</a>
+			</div>
 			
 			
 		</div>
